tests/invalid/CoCoAssignmentToInlineExpression.nestml
model CoCoAssignmentToInlineExpression:
    parameters:
        tau_syn ms = 10 ms

    equations:
        kernel alpha_kernel = (e / tau_syn) * t * exp(-t / tau_syn)
        inline foo real = convolve(alpha_kernel, spikes_in)

    input:
        spikes_in <- spike

    update:
        foo = 42.
